add role editor to user, create partials for journalist/editor, update seed file, fix failed test by adding javascript testing

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -39,12 +39,11 @@
     <p> 
         <%= link_to 'Delete', 
                     article_path(@article), 
-                                method: :delete 
+                                method: :delete,
+                                data: { confirm: 'Are you sure?' } 
                                  %>     
     </p>
         
 <% end %>
  
 <%= link_to 'Back', article_path %>
-
-<%# data: { confirm: 'Are you sure?' } %>
